typecd: Add D-Bus methods to export data required for visibility UI
Add D-Bus methods to exposrt data required for visibility UI. This
includes information about the port count, current mode, alternate
modes, identity, revision and PLD.

BUG=b:241786017
TEST=FEATURES=test emerge-${BOARD} chromeos-base/typecd. Confirmed
data was correctly returned with local typecd_tool update.

Change-Id: Ida6bec5ac30ec7bbdb53c97fdb54ff61d05a6349
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5298324
Reviewed-by: Won Chung <wonchung@google.com>
Commit-Queue: Jameson Thies <jthies@google.com>
Tested-by: Jameson Thies <jthies@google.com>
Reviewed-by: Benson Leung <bleung@google.com>

--- a/typecd/dbus/typecd.conf
+++ b/typecd/dbus/typecd.conf
@@ -22,6 +22,24 @@
   <policy user="chronos">
     <allow send_destination="org.chromium.typecd"
            send_interface="org.chromium.typecd"
+           send_member="GetAltModes"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
+           send_member="GetCurrentMode"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
+           send_member="GetIdentity"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
+           send_member="GetPLD"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
+           send_member="GetPortCount"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
+           send_member="GetRevision"/>
+    <allow send_destination="org.chromium.typecd"
+           send_interface="org.chromium.typecd"
            send_member="SetPeripheralDataAccess"/>
     <allow send_destination="org.chromium.typecd"
            send_interface="org.chromium.typecd"
