--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -800,6 +800,13 @@ cellular-failure=\
     tail -n 100 /var/log/net.log | grep -v "wifi\|wpa\|wlan\|eth\|nl80211"; \
     echo EOF
 
+tethering-failure=\
+    echo "===/var/log/messages==="; \
+    tail -n 20 /var/log/messages; \
+    echo "===/var/log/net.log==="; \
+    tail -n 100 /var/log/net.log | grep "shill\|wpa_supplicant\|patchpaneld\|ModemManager"; \
+    echo EOF
+
 modemfwd=\
     echo "===/var/log/messages==="; \
     tail -n 100 /var/log/messages | \
