init: Extract mount encrypted metric library
Share metric library with the whole init directory.

BUG=b:172221451
TEST=Compile, CQ

Change-Id: I2d6b2603049dc74fbf7469f4e707543ea1e29b15
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5298612
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Andrey Pronin <apronin@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Brian Norris <briannorris@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -213,11 +213,15 @@ static_library("usermode-helper_lib") {
   configs += [ ":target_defaults" ]
 }
 
+static_library("init_metrics_lib") {
+  sources = [ "metrics/metrics.cc" ]
+  configs += [ ":target_defaults" ]
+}
+
 static_library("mount_encrypted_lib") {
   sources = [
     "mount_encrypted/encrypted_fs.cc",
     "mount_encrypted/encryption_key.cc",
-    "mount_encrypted/mount_encrypted_metrics.cc",
     "mount_encrypted/tpm.cc",
     "mount_encrypted/tpm_setup.cc",
   ]
@@ -234,6 +238,7 @@ static_library("mount_encrypted_lib") {
     sources += [ "mount_encrypted/tpm1.cc" ]
   }
   libs = [ "hwsec-foundation" ]
+  deps = [ ":init_metrics_lib" ]
 }
 
 executable("mount-encrypted") {
