vm_tools: rename crostini_client to vmc
The original design of crostini_client intended to allow a single binary
(crostini_client) to provide multiple tools like vmc, concierge_client,
cicerone_client, and so on, but in practice, it has only ever actually
provided vmc.

Rename the top-level directory to vmc as a first step toward cleaning up
the multiple-frontend complexity.

BUG=b:315411403
TEST=emerge-$BOARD chromeos-base/crostini_client

Cq-Depend: chromium:5302215
Change-Id: Ie5364be87b93a4a30de40442c4ae67ef2cfbd39b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5302155
Reviewed-by: Zihan Chen <zihanchen@google.com>
Tested-by: Daniel Verkamp <dverkamp@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Daniel Verkamp <dverkamp@chromium.org>

--- a/vm_tools/vmc/Cargo.toml
+++ b/vm_tools/vmc/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "crostini_client"
+name = "vmc"
 version = "0.1.0"
 authors = ["The ChromiumOS Authors"]
 build = "build.rs"
 edition = "2018"
 
 [[bin]]
-name = "crostini_client"
+name = "vmc"
 path = "main.rs"
 
 [profile.release]
