--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -92,6 +92,7 @@ pkg_config("libcrash_config") {
 
 static_library("libcrash") {
   sources = [
+    "crash_collector_names.cc",
     "crossystem.cc",
     "paths.cc",
     "util.cc",
@@ -470,6 +471,7 @@ if (use.test) {
       "chrome_collector_test.cc",
       "clobber_state_collector_test.cc",
       "connectivity_util_test.cc",
+      "crash_collector_names_test.cc",
       "crash_collector_test.cc",
       "crash_collector_test.h",
       "crash_reporter_failure_collector_test.cc",
