--- a/attestation/pca_agent/server/minijail/pca_agentd.conf
+++ b/attestation/pca_agent/server/minijail/pca_agentd.conf
@@ -23,7 +23,7 @@ n
 N
 p
 ns-mount
-mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
+mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC,mode=755,size=10M
 bind-mount = /mnt
 bind-mount = /mnt/stateful_partition
 bind-mount = /mnt/stateful_partition/unencrypted
@@ -32,4 +32,5 @@ bind-mount = /run/shill
 bind-mount = /run/dns-proxy
 mount = /var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
 bind-mount = /var/lib/metrics,,1
+bind-mount = /var/lib/pca_agent,,1
 S = /usr/share/policy/pca_agentd-seccomp.policy
