patchpanel: Add post-start script
The post-start script:
- waits for patchpanel D-Bus service ready which means patchpanel is
  able to accept incoming requests (note that since currently there is
  no service starts on patchpanel started now, no this should have no
  real impact);
- logs patchpanel start and patchpanel-started event since patchpanel
  is a critical service to several other services, so it's important to
  understand its boot performance.

BUG=b:325857090
TEST=Rebooted DUT, checked /run/bootstat/uptime-patchpanel-started

Change-Id: I174405828a7db548482b2ce3bb8c9304adb4ed54
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5306134
Tested-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -33,6 +33,9 @@ pre-start script
 end script
 
 script
+  # Record the patchpanel start event at /run/bootstat/uptime-patchpanel-start.
+  bootstat patchpanel-start
+
   # Start constructing minijail0 args...
   args=""
 
@@ -99,4 +102,12 @@ script
   args="${args} /usr/bin/patchpaneld"
 
   exec minijail0 ${args}
+end script
+
+# Mark service as started after D-Bus service is ready. Also log the metrics,
+# which can be found at /run/bootstat/uptime-patchpanel-started.
+post-start script
+  minijail0 -u patchpaneld -g patchpaneld \
+      /usr/bin/gdbus wait --system --timeout 60 org.chromium.PatchPanel
+  bootstat patchpanel-started
 end script
