--- a/patchpanel/dbus/org.chromium.Patchpanel.conf
+++ b/patchpanel/dbus/org.chromium.Patchpanel.conf
@@ -38,6 +38,9 @@
     <allow send_destination="org.chromium.PatchPanel"
            send_interface="org.chromium.PatchPanel"
            send_member="SetFeatureFlag" />
+    <allow send_destination="org.chromium.PatchPanel"
+           send_interface="org.chromium.PatchPanel"
+           send_member="TagSocket" />
   </policy>
   <policy user="crosvm">
     <!-- Methods used by crosvm to notify patchpanel of a VM (ARCVM, Termina,
