runtime_probe: Add matcher interface
Add matcher interface for new matcher syntax in probe config. The
implementation will be added in the following CLs.

BUG=b:319392764
TEST=unit test

Change-Id: I3600666938a22e7a374711a5620f4dfc629522ae
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5308565
Tested-by: Chung-sheng Wu <chungsheng@google.com>
Reviewed-by: Allen Shih <allenshihmc@chromium.org>
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>

--- a/runtime_probe/BUILD.gn
+++ b/runtime_probe/BUILD.gn
@@ -61,6 +61,7 @@ source_set("lib") {
   configs += [ ":target_defaults" ]
   deps = [
     "//runtime_probe/functions",
+    "//runtime_probe/matchers",
     "//runtime_probe/system:system_base",
     "//runtime_probe/utils",
   ]
@@ -113,6 +114,7 @@ if (use.test) {
       "//common-mk/testrunner",
       "//runtime_probe/function_templates:test",
       "//runtime_probe/functions:test",
+      "//runtime_probe/matchers:test",
       "//runtime_probe/system:test_utils",
       "//runtime_probe/utils:test",
     ]
