runtime_probe: Add string matcher
Add a matcher to match string field.

BUG=b:319392764
TEST=unit test

Change-Id: Ie4559adb523c848f66da1657d7020cdde358f086
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5308566
Reviewed-by: Allen Shih <allenshihmc@chromium.org>
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Chung-sheng Wu <chungsheng@google.com>

--- a/runtime_probe/matchers/BUILD.gn
+++ b/runtime_probe/matchers/BUILD.gn
@@ -18,7 +18,10 @@ source_set("matchers") {
 
 if (use.test) {
   source_set("test") {
-    sources = [ "matcher_test.cc" ]
+    sources = [
+      "field_matcher_test.cc",
+      "matcher_test.cc",
+    ]
     configs += [
       ":target_defaults",
       "//common-mk:test",
