--- a/runtime_probe/matchers/BUILD.gn
+++ b/runtime_probe/matchers/BUILD.gn
@@ -14,6 +14,7 @@ pkg_config("target_defaults") {
 source_set("matchers") {
   sources = [
     "field_matcher.cc",
+    "logical_matcher.cc",
     "matcher.cc",
   ]
   configs += [ ":target_defaults" ]
