primary_io_manager: introduce PrimaryIoManager
go/chromebox-primary-io

on chromebox-style devices, we have currently disabled permissive USB
passthrough (see go/lofn) due to not wanting to let users 'lose' their
primary input devices to a guest on accident. in order to help mitigate
this possibility, we introduce the PrimaryIoManager service.

this service is responsible for monitoring udev events in the input
subsystem, and registering usb mouse/keyboard devices. in addition, it
marks the first keyboard/mouse it sees as the primary one, which will
prevent a user from passing that device through unless they explicitly
remove the primary designation via the D-Bus interface.

BUG=b:308434587
TEST=unit tests
TEST=emerge-volteer primary_io_manager && deploy

Cq-Depend: 5479931
Change-Id: Ic9a3e06f5ee61f55f779adf8af3febdab4e344a4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5411116
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Tested-by: maciek swiech <drmasquatch@google.com>
Commit-Queue: maciek swiech <drmasquatch@google.com>

--- a/system_api/BUILD.gn
+++ b/system_api/BUILD.gn
@@ -132,6 +132,7 @@ install_dbus_client_headers("install_dbus_headers") {
     "runtime_probe",
     "pciguard",
     "permission_broker",
+    "primary_io_manager",
     "printscanmgr",
     "power_manager",
     "rgbkbd",
