vm_tools: concierge: Move VMMMS Init to Concierge Init
Previously VMMMS init was handled right before ARCVM boot to allow time
for the Platform feature state to be available to concierge. This is no
longer necessary since VMMMS is no longer a platform feature.

Move VMMMS init to be inline with concierge init.

BUG=b:299022811
TEST=CQ, cros_run_unit_tests, arc.Boot.vm

Change-Id: I3c497de8c2d9da9c7274f5bee72644827066ebb2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5313144
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Tested-by: Kameron Lutes <kalutes@chromium.org>
Commit-Queue: Kameron Lutes <kalutes@chromium.org>
Reviewed-by: David Stevens <stevensd@chromium.org>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -160,6 +160,7 @@ if (use.test) {
       "mm/fake_balloon.cc",
       "mm/fake_balloon_blocker.cc",
       "mm/fake_kills_server.cc",
+      "mm/fake_mm_service.cc",
       "mm/fake_reclaim_server.cc",
       "mm/fake_vm_socket.cc",
       "mm/mglru_test.cc",
