chromeos-config: add get-detachable-base-touch-firmware-files subcmd
Add a subcommand that outputs the detachable keyboard and touchpad
firmware combinations.

BUG=b:319924645
TEST=./run_tests
TEST=With CL:5233381, emerge-geralt chromeos-zephyr-detachable-base

Change-Id: Idd7e7b853731c0205ca1fe19a4334b7c0fd2013d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5313147
Tested-by: Ting Shen <phoenixshen@chromium.org>
Reviewed-by: Jack Rosenthal <jrosenth@chromium.org>
Commit-Queue: Ting Shen <phoenixshen@chromium.org>

--- a/chromeos-config/test_data/test.yaml
+++ b/chromeos-config/test_data/test.yaml
@@ -293,7 +293,11 @@ chromeos:
                 depthcharge: "another"
                 libpayload: "another"
                 zephyr-ec: "some/{{$name}}"
+                zephyr-detachable-base: "another_zephyr_base"
               firmware-config: 0xFFFFFFFF
+            detachable-base:
+              ec-image-name: "another_zephyr_base"
+              touch-image-name: "another_zephyr_base-touch.fw"
             ui:
               <<: *ui_common
               extra-ash-flags:
