patchpanel: Use iptables-restore in Start()
Organize the static rules into script files and call iptables-restore
instead of line-by-line iptables for better performance and readability.

BUG=b:322100632
TEST=unit
TEST=manually compare iptables before/after and no effective change

Change-Id: I14dc45a30191348800781de65792b3bb95cc7198
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5311860
Tested-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Taoyu Li <taoyl@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
   deps = [
     ":install_dbus_config",
     ":install_init_config",
+    ":install_iptables_script",
     ":install_seccomp_policy",
     ":install_setuid_restriction",
     ":libpatchpanel",
@@ -59,6 +60,15 @@ install_config("install_seccomp_policy") {
 install_config("install_setuid_restriction") {
   sources = [ "setuid_restrictions/patchpaneld_uid_allowlist.txt" ]
   install_path = "/usr/share/cros/startup/process_management_policies"
+}
+
+# Install the static iptables scripts.
+install_config("install_iptables_script") {
+  sources = [
+    "iptables/ip6tables.start",
+    "iptables/iptables.start",
+  ]
+  install_path = "/etc/patchpanel"
 }
 
 pkg_config("target_defaults") {
