--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -123,6 +123,9 @@
            send_interface="org.chromium.UserDataAuthInterface"
            send_member="RestoreDeviceKey"/>
     <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
+           send_member="GetRecoverableKeyStores"/>
+    <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.CryptohomePkcs11Interface"
            send_member="Pkcs11IsTpmTokenReady"/>
     <allow send_destination="org.chromium.UserDataAuth"
