cryptohome: Fill usernames for AuthFactorCompleted
Fill the username and sanitzed_username field for
AuthenticateAuthFactorCompletedProto message. This will be
used for including the usernames for auth failure events.

BUG=b:322290467
TEST=Unit tests pass

Change-Id: I5aeaa72f3f1ff77467a36c425bf4d9f260ac61c0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5313441
Reviewed-by: John Admanski <jadmanski@chromium.org>
Tested-by: Ryan Borzello <rborzello@google.com>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -255,7 +255,19 @@
            send_member="IsMounted"/>
   </policy>
 
+  <policy user="secagentd">
+    <allow receive_sender="org.chromium.UserDataAuth"
+           receive_interface="org.chromium.UserDataAuthInterface"
+           receive_member="AuthenticateAuthFactorCompleted"/>
+  </policy>
+
   <policy context="default">
     <deny send_destination="org.chromium.UserDataAuth" />
+    <deny receive_sender="org.chromium.UserDataAuth"
+          receive_interface="org.chromium.UserDataAuthInterface"
+          receive_member="AuthenticateAuthFactorCompleted"/>
+    <deny receive_sender="org.chromium.UserDataAuth"
+          receive_interface="org.chromium.UserDataAuthInterface"
+          receive_member="AuthenticateStarted"/>
   </policy>
 </busconfig>
