vm_tools: syslog: replace --log-destination=FOO with --syslog
vmlog_forwarder currently has `--log-dstination` option which looks like
allowing you to give a path to your log location. However, actually this
option does not honor the given path, but just compares it with
pre-defined constant just to turn on and off a flag to control which
logs of syslog and per-VM logs you want to write to.

This CL fixes this behavior by replacing that confusing option with a
bool flag of `--syslog`.

In addition, it changes the behavior of the option. When `--syslog` is
true, now vmlog_forwarder copies all VM logs to syslog without disabling
per-VM log files. There's no use case today where we want to disable
per-VM logs, so this straightforward option woule be more useful to copy
log to `/var/log/messages` on the host.

BUG=b:325362584
TEST=cros_workon_make --board=brya vm_host_tools --test
TEST=boot crostini and logs are not written to syslog

Change-Id: I72a539c67620018e036571d73384edd5e49396f0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5311377
Tested-by: Takaya Saeki <takayas@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Takaya Saeki <takayas@chromium.org>

--- a/vm_tools/init/vmlog_forwarder.conf.in
+++ b/vm_tools/init/vmlog_forwarder.conf.in
@@ -21,7 +21,6 @@ pre-start script
   grep -q vhost-vsock /proc/misc || modprobe -q vhost-vsock
 end script
 
-# When forwarding to /dev/log (the default), we run as syslog.
-# When forwarding to the user's cryptohome/ we run as user crosvm.
+# Forward logs to the user's cryptohome/
 exec minijail0 -l -p -r -v -N -n -c 0  -G -u crosvm -g crosvm \
-     -- /usr/bin/vmlog_forwarder --log_destination=/cryptohome/crosvm/log
+    -- /usr/bin/vmlog_forwarder --syslog=false
