secagentd: Add PID to freezer Cgroup.proc
PID is a required part to operate freezers. This CL adds PID to
cgroup.proc once the process has started.

BUG=b:301136700
TEST=FEATURES=test emerge-zork secagentd

Change-Id: I4dd6654699c8c50ae11b43cee253256f606e0e70
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5309979
Reviewed-by: Jason Ling <jasonling@chromium.org>
Tested-by: Hardik Goyal <hardikgoyal@chromium.org>
Commit-Queue: Hardik Goyal <hardikgoyal@chromium.org>

--- a/secagentd/init/secagentd.conf
+++ b/secagentd/init/secagentd.conf
@@ -41,6 +41,7 @@ respawn
 # These enviroment variable may be modified in the ebuild file.
 # The key eviction feature would be enabled if this variable is true.
 env KEY_EVICTION=false
+env SECAGENTD_FREEZER_CGROUP_DIR=/sys/fs/cgroup/freezer/secagentd
 
 script
   if [ "${KEY_EVICTION}" = true ]; then
@@ -101,4 +102,9 @@ script
 
   exec minijail0 ${jail} -- /usr/sbin/secagentd ${args}
 
+end script
+
+post-start script
+  echo $(status | cut -f 4 -d ' ') > \
+    "${SECAGENTD_FREEZER_CGROUP_DIR}/cgroup.procs"
 end script
