crash: Also use gravedigger in anomaly_detector for file reading
Prepare anomaly_detector for soul by adding the code necessary to read
files using the new gravedigger library instead of base::File.

This is gated behind the `CrOSLateBootGravedigger` feature flag.

BUG=b:320655780
TEST=FEATURES=test emerge-hatch crash-reporter

Cq-Depend: chromium:5314502
Change-Id: Iae375244fa534ecdb8dcaaddb08819cbeeb2aa8e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5314899
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Christoph Schlosser <cschlosser@chromium.org>
Tested-by: Christoph Schlosser <cschlosser@chromium.org>

--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -329,6 +329,10 @@ executable("anomaly_detector") {
     "system_api-metrics_event-protos",
     "system_api-anomaly_detector-protos",
   ]
+  pkg_deps = [
+    "libfeatures",
+    "libgravedigger",
+  ]
   deps = [ ":libcrash" ]
 }
 
@@ -565,6 +569,7 @@ if (use.test) {
       ":libcrash",
       "//common-mk/testrunner:testrunner",
     ]
+    pkg_deps = [ "libfake_platform_features" ]
   }
 
   executable("anomaly_detector_text_file_reader_test") {
@@ -580,6 +585,11 @@ if (use.test) {
       ":libcrash_reporter_config",
     ]
     libs = [ "system_api-anomaly_detector-protos" ]
+    pkg_deps = [
+      "libfake_platform_features",
+      "libfeatures",
+      "libgravedigger",
+    ]
     deps = [
       ":libcrash",
       "//common-mk/testrunner:testrunner",
@@ -600,6 +610,10 @@ if (use.test) {
       ":libcrash_reporter_config",
     ]
     libs = [ "system_api-anomaly_detector-protos" ]
+    pkg_deps = [
+      "libfeatures",
+      "libgravedigger",
+    ]
     deps = [
       ":libcrash",
       "//common-mk/testrunner:testrunner",
