--- a/debugd/share/org.chromium.debugd.conf
+++ b/debugd/share/org.chromium.debugd.conf
@@ -31,6 +31,9 @@
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
           send_member="ClearFirmwareDumpBuffer" />
+    <deny send_destination="org.chromium.debugd"
+          send_interface="org.chromium.debugd"
+          send_member="GetFeedbackBinaryLogs" />
     <!-- Only typecd should access the following commands. -->
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
@@ -67,6 +70,9 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="GetPerfOutputV2" />
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="GetFeedbackBinaryLogs" />
   </policy>
 
   <policy user="chronos">
@@ -85,6 +91,9 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="GetPerfOutputV2" />
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="GetFeedbackBinaryLogs" />
   </policy>
 
   <policy user="runtime_probe">
