debugd: Add binary_log_tool to send binary log data
Add binary_log_tool to collect and send binary firmware dump data. This
patch implements the placeholder function to send the dummy data for
testing.

BUG=b:291347317
TEST=Build
     $ cros_workon --board=brya-connectivitynext start debugd
     $ emerge-brya-connectivitynext debugd
     $ cros_workon_make --board=brya-connectivitynext --test debugd

Change-Id: Ic85cd0fed9171ede0fe24bf6a0f83b6c29d9fcce
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5316167
Commit-Queue: Michael Sun <michaelfsun@google.com>
Tested-by: Michael Sun <michaelfsun@google.com>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Manish Mandlik <mmandlik@chromium.org>
Tested-by: Manish Mandlik <mmandlik@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -104,6 +104,7 @@ pkg_config("libdebugd_dependent_config") {
 static_library("libdebugd") {
   sources = [
     "src/battery_tool.cc",
+    "src/binary_log_tool.cc",
     "src/bluetooth_utils.cc",
     "src/constants.cc",
     "src/container_tool.cc",
@@ -434,6 +435,7 @@ if (use.test) {
 
   executable("debugd_testrunner") {
     sources = [
+      "src/binary_log_tool_test.cc",
       "src/crash_sender_tool_test.cc",
       "src/crosh_shell_tool_test.cc",
       "src/cups_tool_test.cc",
