dlcservice: Decouple installations via updater [1/5]
Begin decoupling updater (update_engine) to enable flexible installer
options for dlcservice.

Change scope: Introduce `Installer` to start intercepting install
related bit of DLC(s).

BUG=b:220202911
TEST=FEATURES=test emerge-$B <PKG>

Change-Id: I8cad02f598383c656d9d78d163d372795c37ca4f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5314814
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Reviewed-by: Saketh Pothireddy <spothire@google.com>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/dlcservice/BUILD.gn
+++ b/dlcservice/BUILD.gn
@@ -150,6 +150,7 @@ static_library("libdlcservice") {
     "dlc_base.cc",
     "dlc_base_creator.cc",
     "dlc_service.cc",
+    "installer.cc",
     "prefs.cc",
     "system_properties.cc",
   ]
