--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -39,7 +39,10 @@ if (use.test) {
   }
 
   source_set("test") {
-    sources = [ "audio_jack_evdev_delegate_test.cc" ]
+    sources = [
+      "audio_jack_evdev_delegate_test.cc",
+      "power_button_evdev_delegate_test.cc",
+    ]
     configs += [
       ":test_pkg_deps",
       "//common-mk:test",
