--- a/resourced/Cargo.toml
+++ b/resourced/Cargo.toml
@@ -17,7 +17,7 @@ members = ["schedqos"]
 
 [features]
 # Feature chromeos is turned on when building with ebuild.
-chromeos = ["featured"]
+chromeos = ["featured", "metrics_rs"]
 # Feature vm_grpc is commented as it's not used and doesn't compile.
 # vm_grpc = ["grpcio", "futures", "futures-channel", "futures-executor", "futures-util"]
 
@@ -32,7 +32,7 @@ glob = "0.3"
 libc = "0.2"
 libchromeos = { path = "../libchromeos-rs/" } # provided by ebuild
 log = "0.4"
-metrics_rs = "0.1.0"
+metrics_rs = { version="0.1.0", optional = true }
 once_cell = "1.7"
 regex = "1.5"
 schedqos = { path = "./schedqos" }
