shill: add TCProcess to represent a lifetime of TC process
This CL copies the logic of spawning a 'tc' process from the Throttler
class into a TCProcess class. At the following CL, we will refactor the
Throttler class to use the TCProcess class.

BUG=b:218318593
TEST=FEATURES=test emerge-brya shill

Change-Id: I2a0bd2aeb21baea6b0c79115d7b51b970d1704ea
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5316210
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -373,6 +373,7 @@ static_library("libshill") {
     "supplicant/supplicant_eap_state_handler.cc",
     "supplicant/supplicant_manager.cc",
     "supplicant/wpa_supplicant.cc",
+    "tc_process.cc",
     "technology.cc",
     "tethering.cc",
     "tethering_manager.cc",
@@ -774,6 +775,7 @@ if (use.test) {
       "mock_profile.cc",
       "mock_resolver.cc",
       "mock_service.cc",
+      "mock_tc_process.cc",
       "mock_throttler.cc",
       "mock_time.cc",
       "mock_virtual_device.cc",
@@ -832,6 +834,7 @@ if (use.test) {
       "supplicant/supplicant_eap_state_handler_test.cc",
       "supplicant/supplicant_manager_test.cc",
       "supplicant/wpa_supplicant_test.cc",
+      "tc_process_test.cc",
       "technology_test.cc",
       "testing.cc",
       "testrunner.cc",
