dlcservice: Decouple installations via updater [5/5]
Begin decoupling updater (update_engine) to enable flexible installer
options for dlcservice.

Change scope: Installer unittests.

BUG=b:220202911
TEST=FEATURES=test emerge-$B <PKG>

Change-Id: Ibb89622003aa611126f735b01f59b2628a2e5232
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5318967
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>

--- a/dlcservice/BUILD.gn
+++ b/dlcservice/BUILD.gn
@@ -233,6 +233,7 @@ if (use.test) {
       "dlc_service_test.cc",
       "dlc_test.cc",
       "error_test.cc",
+      "installer_test.cc",
       "metrics_test.cc",
       "prefs_test.cc",
       "system_state_test.cc",
